// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Address address formatting when claimantValidateAddress feature flag is enabled when validation service returns multiple valid addresses does not update API and shows address suggestions when user clicks save and continue 1`] = `
<div
  class="border-left-05 padding-left-2"
  data-testid="residential-address-error"
>
  <fieldset
    class="usa-fieldset margin-top-3 usa-form-group"
  >
    <legend
      class="usa-label text-bold usa-legend font-heading-xs measure-5"
    >
      Verify your address
    </legend>
    <span
      class="display-block line-height-sans-5 measure-5 usa-hint text-base-darkest"
    >
      Suggested:
    </span>
    <div
      class=""
    >
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice1436"
          name="address-formatting-error1458"
          type="radio"
          value="mockaddresskeyapt1"
        />
        <label
          class="usa-radio__label"
          for="InputChoice1436"
        >
          54321 Mock Address Apt 1 Washington, DC 20005
        </label>
      </div>
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice1437"
          name="address-formatting-error1458"
          type="radio"
          value="mockaddresskeyapt2"
        />
        <label
          class="usa-radio__label"
          for="InputChoice1437"
        >
          54321 Mock Address Apt 2 Washington, DC 20005
        </label>
      </div>
    </div>
  </fieldset>
  <fieldset
    class="usa-fieldset margin-top-3 usa-form-group"
  >
    <legend
      class="usa-label text-bold usa-legend font-heading-xs measure-5"
    >
      
    </legend>
    <span
      class="display-block line-height-sans-5 measure-5 usa-hint text-base-darkest"
    >
      Entered:
    </span>
    <div
      class=""
    >
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice1438"
          name="address-formatting-error1459"
          type="radio"
          value="none"
        />
        <label
          class="usa-radio__label"
          for="InputChoice1438"
        >
          54321 Mock Address , Washington DC 20005
        </label>
      </div>
    </div>
  </fieldset>
  <button
    class="usa-button position-relative usa-button--unstyled"
    type="button"
  >
    Edit address
  </button>
</div>
`;

exports[`Address address formatting when claimantValidateAddress feature flag is enabled when validation service returns multiple valid addresses does not update API and shows address suggestions when user clicks save and continue 2`] = `
<div
  class="border-left-05 padding-left-2"
  data-testid="mailing-address-error"
>
  <fieldset
    class="usa-fieldset margin-top-3 usa-form-group"
  >
    <legend
      class="usa-label text-bold usa-legend font-heading-xs measure-5"
    >
      Verify your address
    </legend>
    <span
      class="display-block line-height-sans-5 measure-5 usa-hint text-base-darkest"
    >
      Suggested:
    </span>
    <div
      class=""
    >
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice1467"
          name="address-formatting-error1465"
          type="radio"
          value="mockaddresskeyapt1"
        />
        <label
          class="usa-radio__label"
          for="InputChoice1467"
        >
          54321 Mock Address Apt 1 Washington, DC 20005
        </label>
      </div>
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice1468"
          name="address-formatting-error1465"
          type="radio"
          value="mockaddresskeyapt2"
        />
        <label
          class="usa-radio__label"
          for="InputChoice1468"
        >
          54321 Mock Address Apt 2 Washington, DC 20005
        </label>
      </div>
    </div>
  </fieldset>
  <fieldset
    class="usa-fieldset margin-top-3 usa-form-group"
  >
    <legend
      class="usa-label text-bold usa-legend font-heading-xs measure-5"
    >
      
    </legend>
    <span
      class="display-block line-height-sans-5 measure-5 usa-hint text-base-darkest"
    >
      Entered:
    </span>
    <div
      class=""
    >
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice1469"
          name="address-formatting-error1466"
          type="radio"
          value="none"
        />
        <label
          class="usa-radio__label"
          for="InputChoice1469"
        >
          54321 Mock Address , Washington DC 20005
        </label>
      </div>
    </div>
  </fieldset>
  <button
    class="usa-button position-relative usa-button--unstyled"
    type="button"
  >
    Edit address
  </button>
</div>
`;

exports[`Address address formatting when claimantValidateAddress feature flag is enabled when validation service returns no valid addresses does not update API and shows address suggestions 1`] = `
<div
  class="border-left-05 padding-left-2"
  data-testid="residential-address-error"
>
  <fieldset
    class="usa-fieldset margin-top-3 usa-form-group"
  >
    <legend
      class="usa-label text-bold usa-legend font-heading-xs measure-5"
    >
      Verify your address
    </legend>
    <span
      class="display-block line-height-sans-5 measure-5 usa-hint text-base-darkest"
    >
      We could not verify your address as entered
    </span>
    <div
      class=""
    >
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice1816"
          name="address-formatting-error1833"
          type="radio"
          value="none"
        />
        <label
          class="usa-radio__label"
          for="InputChoice1816"
        >
          Use address as entered:
          <span
            class="usa-hint text-base-dark"
          >
            <br />
            54321 Mock Address , Washington DC 20005
          </span>
        </label>
      </div>
    </div>
  </fieldset>
  <button
    class="usa-button position-relative usa-button--unstyled"
    type="button"
  >
    Edit address
  </button>
</div>
`;

exports[`Address address formatting when claimantValidateAddress feature flag is enabled when validation service returns no valid addresses does not update API and shows address suggestions 2`] = `
<div
  class="border-left-05 padding-left-2"
  data-testid="mailing-address-error"
>
  <fieldset
    class="usa-fieldset margin-top-3 usa-form-group"
  >
    <legend
      class="usa-label text-bold usa-legend font-heading-xs measure-5"
    >
      Verify your address
    </legend>
    <span
      class="display-block line-height-sans-5 measure-5 usa-hint text-base-darkest"
    >
      We could not verify your address as entered
    </span>
    <div
      class=""
    >
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice1838"
          name="address-formatting-error1837"
          type="radio"
          value="none"
        />
        <label
          class="usa-radio__label"
          for="InputChoice1838"
        >
          Use address as entered:
          <span
            class="usa-hint text-base-dark"
          >
            <br />
            54321 Mock Address , Washington DC 20005
          </span>
        </label>
      </div>
    </div>
  </fieldset>
  <button
    class="usa-button position-relative usa-button--unstyled"
    type="button"
  >
    Edit address
  </button>
</div>
`;

exports[`Address renders the page without any address info 1`] = `
<form
  class="usa-form"
  method="post"
>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
    tabindex="-1"
  >
    Your identification
  </h1>
  <fieldset
    class="usa-fieldset margin-top-3"
  >
    <legend
      class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
    >
      What is your current residential address?
    </legend>
    <span
      class="display-block line-height-sans-5 measure-5 usa-intro"
    >
      We will use this as your residential address for any previous applications you have submitted. If you are part of an Address Confidentiality Program, please provide your substitute address.
    </span>
    <div
      class="usa-form-group"
    >
      <label
        class="usa-label text-bold font-heading-xs measure-5"
        for="InputText1"
        id="InputText1_label"
      >
        Address
      </label>
      <input
        aria-labelledby="InputText1_label InputText1_hint InputText1_error"
        autocomplete="address-line1"
        class="usa-input maxw-mobile-lg"
        id="InputText1"
        name="residential_address.line_1"
        type="text"
        value=""
      />
    </div>
    <div
      class="usa-form-group"
    >
      <label
        class="usa-label text-bold font-heading-xs measure-5"
        for="InputText2"
        id="InputText2_label"
      >
        Address line 2
        <span
          class="usa-hint text-base-dark text-normal"
        >
           (optional)
        </span>
      </label>
      <input
        aria-labelledby="InputText2_label InputText2_hint InputText2_error"
        autocomplete="address-line2"
        class="usa-input maxw-mobile-lg"
        id="InputText2"
        name="residential_address.line_2"
        type="text"
        value=""
      />
    </div>
    <div
      class="usa-form-group"
    >
      <label
        class="usa-label text-bold font-heading-xs measure-5"
        for="InputText3"
        id="InputText3_label"
      >
        City
      </label>
      <input
        aria-labelledby="InputText3_label InputText3_hint InputText3_error"
        autocomplete="address-level2"
        class="usa-input maxw-mobile-lg"
        id="InputText3"
        name="residential_address.city"
        type="text"
        value=""
      />
    </div>
    <div
      class="usa-form-group"
    >
      <label
        class="usa-label text-bold font-heading-xs measure-5"
        for="Dropdown4"
        id="Dropdown4_label"
      >
        State
      </label>
      <div
        class=""
        data-default-value=""
      >
        <select
          aria-labelledby="Dropdown4_label Dropdown4_hint Dropdown4_error"
          class="usa-select maxw-mobile-lg"
          id="Dropdown4"
          name="residential_address.state"
        >
          <option
            value=""
          >
            - Select an answer -
          </option>
          <option
            value="AL"
          >
            Alabama
          </option>
          <option
            value="AK"
          >
            Alaska
          </option>
          <option
            value="AS"
          >
            American Samoa
          </option>
          <option
            value="AZ"
          >
            Arizona
          </option>
          <option
            value="AR"
          >
            Arkansas
          </option>
          <option
            value="CA"
          >
            California
          </option>
          <option
            value="CO"
          >
            Colorado
          </option>
          <option
            value="CT"
          >
            Connecticut
          </option>
          <option
            value="DE"
          >
            Delaware
          </option>
          <option
            value="DC"
          >
            District of Columbia
          </option>
          <option
            value="FL"
          >
            Florida
          </option>
          <option
            value="GA"
          >
            Georgia
          </option>
          <option
            value="GU"
          >
            Guam
          </option>
          <option
            value="HI"
          >
            Hawaii
          </option>
          <option
            value="ID"
          >
            Idaho
          </option>
          <option
            value="IL"
          >
            Illinois
          </option>
          <option
            value="IN"
          >
            Indiana
          </option>
          <option
            value="IA"
          >
            Iowa
          </option>
          <option
            value="KS"
          >
            Kansas
          </option>
          <option
            value="KY"
          >
            Kentucky
          </option>
          <option
            value="LA"
          >
            Louisiana
          </option>
          <option
            value="ME"
          >
            Maine
          </option>
          <option
            value="MD"
          >
            Maryland
          </option>
          <option
            value="MA"
          >
            Massachusetts
          </option>
          <option
            value="MI"
          >
            Michigan
          </option>
          <option
            value="MN"
          >
            Minnesota
          </option>
          <option
            value="MS"
          >
            Mississippi
          </option>
          <option
            value="MO"
          >
            Missouri
          </option>
          <option
            value="MT"
          >
            Montana
          </option>
          <option
            value="NE"
          >
            Nebraska
          </option>
          <option
            value="NV"
          >
            Nevada
          </option>
          <option
            value="NH"
          >
            New Hampshire
          </option>
          <option
            value="NJ"
          >
            New Jersey
          </option>
          <option
            value="NM"
          >
            New Mexico
          </option>
          <option
            value="NY"
          >
            New York
          </option>
          <option
            value="NC"
          >
            North Carolina
          </option>
          <option
            value="ND"
          >
            North Dakota
          </option>
          <option
            value="MP"
          >
            Northern Mariana Islands
          </option>
          <option
            value="OH"
          >
            Ohio
          </option>
          <option
            value="OK"
          >
            Oklahoma
          </option>
          <option
            value="OR"
          >
            Oregon
          </option>
          <option
            value="PA"
          >
            Pennsylvania
          </option>
          <option
            value="PR"
          >
            Puerto Rico
          </option>
          <option
            value="RI"
          >
            Rhode Island
          </option>
          <option
            value="SC"
          >
            South Carolina
          </option>
          <option
            value="SD"
          >
            South Dakota
          </option>
          <option
            value="TN"
          >
            Tennessee
          </option>
          <option
            value="TX"
          >
            Texas
          </option>
          <option
            value="VI"
          >
            U.S. Virgin Islands
          </option>
          <option
            value="UT"
          >
            Utah
          </option>
          <option
            value="VT"
          >
            Vermont
          </option>
          <option
            value="VA"
          >
            Virginia
          </option>
          <option
            value="WA"
          >
            Washington
          </option>
          <option
            value="WV"
          >
            West Virginia
          </option>
          <option
            value="WI"
          >
            Wisconsin
          </option>
          <option
            value="WY"
          >
            Wyoming
          </option>
        </select>
      </div>
    </div>
    <div
      class="usa-form-group"
    >
      <label
        class="usa-label text-bold font-heading-xs measure-5"
        for="InputText5"
        id="InputText5_label"
      >
        ZIP
      </label>
      <div
        class=""
      >
        <input
          aria-labelledby="InputText5_label InputText5_hint InputText5_error"
          autocomplete="postal-code"
          class="usa-input usa-input--medium"
          id="InputText5"
          inputmode="numeric"
          name="residential_address.zip"
          type="text"
          value=""
        />
      </div>
    </div>
  </fieldset>
  <fieldset
    class="usa-fieldset margin-top-3 usa-form-group"
  >
    <legend
      class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
    >
      Do you get your mail at this address?
    </legend>
    <span
      class="display-block line-height-sans-5 measure-5 usa-intro"
    >
      We may send notices to this address. If you choose to get your payments through paper checks, we will mail the checks to this address.
    </span>
    <div
      class="margin-top-3"
    >
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice6"
          name="has_mailing_address"
          type="radio"
          value="false"
        />
        <label
          class="usa-radio__label"
          for="InputChoice6"
        >
          Yes
        </label>
      </div>
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice7"
          name="has_mailing_address"
          type="radio"
          value="true"
        />
        <label
          class="usa-radio__label"
          for="InputChoice7"
        >
          No, I would like to add a mailing address
        </label>
      </div>
    </div>
  </fieldset>
  <button
    class="usa-button position-relative margin-top-4"
    type="submit"
  >
    Save and continue
  </button>
</form>
`;
